--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+     "cors": "^2.8.5",
     "puppeteer": "^24.0.0",  
    "@supabase/supabase-js": "^2.47.12",
     "winston": "^3.0.0"
