--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "facebook-share-automation",
+  "name": "share-api",
   "version": "1.0.0",
-  "description": "Automate Facebook post sharing with Puppeteer and Supabase",
+  "description": "A Node.js API for sharing posts on Facebook using C3C utility",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-     "cors": "^2.8.5",
-    "puppeteer": "^24.0.0",  
-   "@supabase/supabase-js": "^2.47.12",
-    "winston": "^3.0.0"
+    "axios": "^1.3.0",
+    "express": "^4.13.0",
+    "c3c-utility": "^1.0.0"
   },
-  "engines": {
-    "node": ">=22.13.0"
+  "devDependencies": {
+    "nodemon": "^2.0.0",
+    "jest": "^29.0.0",
+    "eslint": "^8.0.0",
+    "prettier": "^3.0.0"
   },
   "author": "Your Name",
-  "license": "MIT"
+  "license": "ISC"
 }
