--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.3.0",
-    "express": "^4.13.0",
-    "c3c-utility": "^1.0.0"
+    "express": "^4.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.0",
